--- a/4.Kubernetes/deployment.yml
+++ b/4.Kubernetes/deployment.yml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: studentx-deployment
+  name: student1-deployment
 spec:
   selector:
     matchLabels:
-      app: studentx
+      app: student1
   template:
     metadata:
       labels:
-        app: studentx
+        app: student1
     spec:
       containers:
-      - name: studentx
-        image: registry.tanzu.dk/ops2devops/studentx:v1
+      - name: student1
+        image: registry.tanzu.dk/ops2devops/student1:v1
